--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ ADMIN_KEY=change-me-to-a-secret-key
 # ─── SMTP / Email (Gmail example) ───
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-gmail-app-password
+SMTP_USER=ishmeengarewal@gmail.com
+SMTP_PASS=zvog nblx vpnx lozo
 
 # ─── Server ───
 PORT=3000
