--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "node --watch server.js"
     },
     "dependencies": {
+        "@netlify/blobs": "^10.7.0",
         "bcrypt": "^5.1.1",
         "better-sqlite3": "^11.7.0",
         "dotenv": "^16.4.7",
