Switch to SendGrid email, remove Render/Docker files, ready for Netlify

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 # ─── Admin Key (for the admin panel) ───
 ADMIN_KEY=change-me-to-a-secret-key
 
-# ─── SMTP / Email (Gmail example) ───
-SMTP_HOST=smtp.gmail.com
+# ─── SMTP / Email (SendGrid — free 100 emails/day) ───
+# Sign up at https://sendgrid.com → Settings → API Keys → Create Key
+# Then: Settings → Sender Authentication → verify your sender email
+# Set these same variables in Netlify → Site configuration → Environment variables
+SMTP_HOST=smtp.sendgrid.net
 SMTP_PORT=587
-SMTP_USER=ishmeengarewal@gmail.com
-SMTP_PASS=zvog nblx vpnx lozo
+SMTP_USER=apikey
+SMTP_PASS=SG.your-sendgrid-api-key-here
 
-# ─── Server ───
+# ─── Server (local dev only, ignored on Netlify) ───
 PORT=3000
