--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@
 
 [functions]
   node_bundler = "esbuild"
+  external_node_modules = ["@netlify/blobs"]
   included_files = ["netlify/functions/**"]
 
 # Redirect API calls to Netlify Functions
